--- a/rock_paper_scissors/templates/move_made.html
+++ b/rock_paper_scissors/templates/move_made.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <p>Your move: {{ user_move }}</P>
-<p>My move: {{ our_move }}</P>
+<p>My move: {{ my_move }}</P>
 
 {% if winner == "me" %}
 <h1>I win</h1>
