--- a/rock_paper_scissors/templates/move_made.html
+++ b/rock_paper_scissors/templates/move_made.html
@@ -1,4 +1,5 @@
-<!doctype html>
+{% extends "base.html" %}
+{% block content %}
 
 <p>Your move: {{ user_move }}</P>
 <p>My move: {{ my_move }}</P>
@@ -12,3 +13,4 @@
 {% endif %}
 
 <a href="/">make another move</a>
+{% endblock %}
